--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -27,11 +27,17 @@
         <input placeholder="Search stock..." autofocus id="searchStocks_input_id">
         <div id="boi" style="color: white"></div>
       </div>
-
-      <div id="viewStock_id">
-        <center><p>Pick a stock from the list</p></center>
+      
+      <div id="ViewBuystockBox_id">
+        <div id="viewStock_id">
+          
+          <canvas id="myChart"></canvas>
+        </div>
+       
+        <br>
+        <input id="NumberOfStocks_id" type="number" max="99999" min="1" placeholder="1">
+        <button id="BuyStockButton_id">Buy</button>
       </div>
-      <button>Buy</button>
 </body>
 
 <style>
@@ -63,19 +69,53 @@
         color: lightgray;
         font-family: bahnschrift;
         float: right;
-        margin-top: 3%;
-        width: 46%;
-        margin-right: 1%;
+        padding:10px;
+        width: 100%;
+      
         height: 420px;
         border-radius: 13px;
-    }
-    #viewStock_id:hover{
-        background-color: #303030;
     }
     #viewStock_id p{
         font-family: normalskrift;
     }
+    #ViewBuystockBox_id{
+      display: block;
+      float: right;
+      width: 46%;
+      margin-top: 3%;
+    }
+    #BuyStockButton_id{
+      background-color: green;
+      color: lightgray;
+      font-family: normalskrift;
+      outline: none;
+      border: none;
+      padding: 7px 30px 7px 30px;
+      margin-top: 1%;
+      font-size: 15px;
+
+      border-bottom-right-radius: 7px;
+      border-top-right-radius: 7px;
+    }
+    #BuyStockButton_id:hover{
+      cursor: pointer;
+    }
+    #NumberOfStocks_id{
+      width: 20%;
+      font-family: normalskrift;
+      border-bottom-left-radius: 7px;
+      border-top-left-radius: 7px;
+      padding: 7px;
+      font-size: 15px;
+      border: none;
+      outline: none;
+      background-color: lightgray;
+    }
+  
 </style>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 
 
 <script>
@@ -95,20 +135,31 @@
         "PepsiCo, Inc. (PEP)",    // PepsiCo, Inc.
         "Costco Wholesale Corporation (COST)",   // Costco Wholesale Corporation
 ];
+const stocksTicker = [
+  "AAPL", "MSFT", "AMZN", "GOOG", "META", "NVDA", "TSLA", "INTC", "ADBE", "NFLX", "PYPL", "CSCO", "PEP", "COST"
+];
 
-
-for(let i = 0; i < stocks.length; i++){
-
+for (let i = 0; i < stocks.length; i++) {
     const para = document.createElement("button");
     const node = document.createTextNode(stocks[i]);
+
+    para.setAttribute("data-ticker", stocksTicker[i]);
+    para.type = "button";
+
     para.appendChild(node);
+    
+    para.addEventListener("click", function(event) {
+        let ticker = event.currentTarget.dataset.ticker;
+        console.log("Ticker clicked:", ticker); // For debugging
+        retrieveStockTicker(ticker);
+    });
+
     const element = document.getElementById("boi");
     element.appendChild(para);
 }
-// const retrieveStockData = import('./portfoliotracker/backend/api_test.js'); // Replace with the actual path
 
-// Call the function
-//retrieveStockData();
+
+
 
 
 
@@ -130,9 +181,65 @@ function searchStocks(event) {
     }
   });
 }
-
 document.getElementById("searchStocks_input_id").addEventListener("keyup", searchStocks);
 
-    
+
+
+
+
+
+// -------------------------------------------------------------------------------------//
+
+// RETRIEVE STOCK DATA //
+
+// -------------------------------------------------------------------------------------//
+
+
+let boi = [];
+
+function retrieveStockTicker(ticker) {
+    let key = ticker; // Denne variabel bestemmer hvilket data der hentes
+    console.log(ticker);
+
+    fetch(`/api/data?key=${key}`)
+      .then(res => res.json())
+      .then(data => {
+        if (data.error) {
+            console.log(data.error);
+        } else {
+            console.log(data);  // This will log the fetched stock data (prices)
+            boi = data;
+            displayStock();
+        }
+      })
+      .catch(error => {
+        console.error('Error fetching data:', error);
+      });
+}
+
+
+
+function displayStock()
+{
+  const xValues = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21];
+  new Chart("myChart", {
+    type: "line",
+    data: {
+    labels: xValues,
+    datasets: [{ 
+      data: boi,
+      borderColor: "blue",
+      fill: false
+    }]
+  },
+  options: {
+    legend: {display: false}
+  }
+});
+}
+
+
+
+
 
 </script>
